force-app/main/default/objects/AgentSubagentConfig__c/AgentSubagentConfig__c.object-meta.xml
<CustomObject>
    <description>Stores the Abstraction Contract per subagent per agent.</description>
    <label>Agent Subagent Config</label>
    <nameField>
        <displayFormat>SACFG-{000000}</displayFormat>
        <label>Agent Subagent Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Subagent Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>