force-app/main/default/objects/AgentSubagentConfig__c/fields/agent_api_name__c.field-meta.xml
<CustomField>
    <fullName>agent_api_name__c</fullName>
    <description>Which agent this subagent config belongs to.</description>
    <label>Agent API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>