force-app/main/default/objects/AgentSubagentConfig__c/fields/optimal_actions__c.field-meta.xml
<CustomField>
    <fullName>optimal_actions__c</fullName>
    <description>Expected efficient action count for this subagent.</description>
    <label>Optimal Actions</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>