force-app/main/default/objects/AgentSubagentConfig__c/fields/outcome_mapping_json__c.field-meta.xml
<CustomField>
    <fullName>outcome_mapping_json__c</fullName>
    <description>JSON mapping of domain events to outcomes. Format: [{&quot;domain_event&quot;:&quot;...&quot;,&quot;maps_to&quot;:&quot;success&quot;}]</description>
    <label>Outcome Mapping JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>