force-app/main/default/objects/AgentSubagentConfig__c/fields/significant_outcome_triggers__c.field-meta.xml
<CustomField>
    <fullName>significant_outcome_triggers__c</fullName>
    <description>Semicolon-separated list of significant outcome triggers (e.g., failure;below_optimal;novel).</description>
    <label>Significant Outcome Triggers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>